kubernetes/apps/observability/kube-prometheus-stack/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "alertmanager.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "prometheus.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
